--- a/maven-lib/pom.xml
+++ b/maven-lib/pom.xml
@@ -118,6 +118,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>io.github.internetms52</groupId>
+                <artifactId>robotxtgen</artifactId>
+                <version>0.1.1</version>
+                <configuration>
+                    <configClass>com.example.MyCustomConfig</configClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <developers>
