--- a/maven-lib/pom.xml
+++ b/maven-lib/pom.xml
@@ -26,6 +26,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.6.3</version>
@@ -118,14 +124,14 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>io.github.internetms52</groupId>
-                <artifactId>robotxtgen</artifactId>
-                <version>0.1.1</version>
-                <configuration>
-                    <configClass>com.example.MyCustomConfig</configClass>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>io.github.internetms52</groupId>-->
+<!--                <artifactId>robotxtgen</artifactId>-->
+<!--                <version>0.1.1</version>-->
+<!--                <configuration>-->
+<!--                    <configClass>com.example.MyCustomConfig</configClass>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
     <developers>
