--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -32,23 +32,15 @@
             <artifactId>maven-project</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.internetms52</groupId>
+            <artifactId>robotxtgen-api</artifactId>
+            <version>0.1.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.2.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>io.github.internetms52</groupId>
-                    <artifactId>robotxtgen-build</artifactId>
-                    <version>0.1.1</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
