--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -33,6 +33,11 @@
             <version>2.2.1</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-artifact</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <dependency>
             <groupId>io.github.internetms52</groupId>
             <artifactId>robotxtgen-api</artifactId>
             <version>0.1.1</version>
