--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.internetms52</groupId>
     <artifactId>robotxtgen-parent</artifactId>
-    <version>0.1.1</version>
+    <version>0.2.0</version>
     <name>robotxtgen-parent</name>
     <packaging>pom</packaging>
     <url>https://github.com/internetms52/robotxtgen</url>
@@ -16,7 +16,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <robotxtgen.version>0.1.1</robotxtgen.version>
+        <robotxtgen.version>0.2.0</robotxtgen.version>
         <gpg.skip>true</gpg.skip>
         <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
@@ -80,6 +80,11 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.8.1</version>
             </plugin>
         </plugins>
     </build>
